workspace/src/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseProgram -> Program                     (0)
	Program -> DeclList                                (1)
	DeclList -> Decl DeclList                          (2)
	DeclList ->                                        (3)
	Decl -> FuncDecl                                   (4)
	Decl -> StructDecl                                 (5)
	Decl -> VarDecl                                    (6)
	FuncDecl -> ForallOpt Func Identifier LParenthesis ParamsOpt RParenthesis RetTypeOpt Block   (7)
	ForallOpt -> Forall TypeParams Dot                 (8)
	ForallOpt ->                                       (9)
	TypeParams -> Identifier                           (10)
	TypeParams -> Identifier TypeParams                (11)
	RetTypeOpt -> TypeDef Type                         (12)
	RetTypeOpt ->                                      (13)
	ParamsOpt -> Params                                (14)
	ParamsOpt ->                                       (15)
	Params -> Param                                    (16)
	Params -> Param Comma Params                       (17)
	Param -> Identifier ParamTypeOpt                   (18)
	ParamTypeOpt -> TypeDef Type                       (19)
	ParamTypeOpt ->                                    (20)
	StructDecl -> Struct Identifier LBrace Fields RBrace   (21)
	Fields -> Field Fields                             (22)
	Fields ->                                          (23)
	Field -> Identifier TypeDef Type Semicolon         (24)
	VarDecl -> Let Identifier TypeDef Type InitOpt Semicolon   (25)
	VarDecl -> Let Identifier Assign Expr Semicolon    (26)
	InitOpt -> Assign Expr                             (27)
	InitOpt ->                                         (28)
	Block -> LBrace Stmts RBrace                       (29)
	Stmts -> Stmt Stmts                                (30)
	Stmts ->                                           (31)
	Stmt -> VarDecl                                    (32)
	Stmt -> LValue Assign Expr Semicolon               (33)
	Stmt -> If LParenthesis Expr RParenthesis Block ElseOpt   (34)
	Stmt -> While LParenthesis Expr RParenthesis Block   (35)
	Stmt -> For LParenthesis ForInitOpt Semicolon Expr Semicolon ForUpdate RParenthesis Block   (36)
	Stmt -> Return ReturnOpt Semicolon                 (37)
	Stmt -> Expr Semicolon                             (38)
	Stmt -> LValue Inc Semicolon                       (39)
	ForUpdate -> LValue Inc                            (40)
	ForUpdate -> Expr                                  (41)
	ElseOpt -> Else Block                              (42)
	ElseOpt ->                                         (43)
	ForInitOpt -> LValue Assign Expr                   (44)
	ForInitOpt ->                                      (45)
	ReturnOpt -> Expr                                  (46)
	ReturnOpt ->                                       (47)
	Expr -> Expr Or AndExpr                            (48)
	Expr -> AndExpr                                    (49)
	AndExpr -> AndExpr And RelExpr                     (50)
	AndExpr -> RelExpr                                 (51)
	RelExpr -> RelExpr RelOp AddExpr                   (52)
	RelExpr -> AddExpr                                 (53)
	RelOp -> Equal                                     (54)
	RelOp -> NotEqual                                  (55)
	RelOp -> Less                                      (56)
	RelOp -> Greater                                   (57)
	RelOp -> LessEqual                                 (58)
	RelOp -> GreaterEqual                              (59)
	AddExpr -> AddExpr Plus Term                       (60)
	AddExpr -> AddExpr Minus Term                      (61)
	AddExpr -> Term                                    (62)
	Term -> Term Multiply Primary                      (63)
	Term -> Term Divide Primary                        (64)
	Term -> Primary                                    (65)
	Primary -> LParenthesis Expr RParenthesis          (66)
	Primary -> Identifier LParenthesis ArgsOpt RParenthesis   (67)
	Primary -> LValue                                  (68)
	Primary -> Literal                                 (69)
	Primary -> LBracket ArgsOpt RBracket               (70)
	Primary -> Identifier LBrace ArgsOpt RBrace        (71)
	Primary -> New BaseType LBracket NewSize RBracket   (72)
	NewSize -> Expr                                    (73)
	ArgsOpt -> Args                                    (74)
	ArgsOpt ->                                         (75)
	Args -> Expr                                       (76)
	Args -> Expr Comma Args                            (77)
	LValue -> Identifier                               (78)
	LValue -> LValue Dot Identifier                    (79)
	LValue -> LValue LBracket Expr RBracket            (80)
	Literal -> ValueInt                                (81)
	Literal -> ValueFloat                              (82)
	Literal -> ValueBool                               (83)
	Literal -> ValueString                             (84)
	Type -> FuncType                                   (85)
	FuncType -> TypeBase Arrow Type                    (86)
	FuncType -> TypeBase                               (87)
	TypeBase -> BaseType                               (88)
	TypeBase -> TypeBase LBracket RBracket             (89)
	TypeBase -> TypeBase LBracket ValueInt RBracket    (90)
	BaseType -> TypeInt                                (91)
	BaseType -> TypeFloat                              (92)
	BaseType -> TypeBool                               (93)
	BaseType -> TypeString                             (94)
	BaseType -> TypeVoid                               (95)
	BaseType -> Identifier                             (96)
	BaseType -> LParenthesis Type RParenthesis         (97)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	TypeInt        { TypeInt _ }
	TypeFloat      { TypeFloat _ }
	TypeBool       { TypeBool _ }
	TypeString     { TypeString _ }
	TypeVoid       { TypeVoid _ }
	Identifier     { Identifier _ $$ }
	ValueInt       { ValueInt _ $$ }
	ValueFloat     { ValueFloat _ $$ }
	ValueString    { ValueString _ $$ }
	ValueBool      { ValueBool _ $$ }
	Let            { Let _ }
	Return         { Return _ }
	While          { While _ }
	For            { For _ }
	If             { If _ }
	Else           { Else _ }
	Func           { Func _ }
	Struct         { Struct _ }
	New            { New _ }
	Forall         { Forall _ }
	Plus           { Plus _ }
	Minus          { Minus _ }
	Multiply       { Multiply _ }
	Divide         { Divide _ }
	Assign         { Assign _ }
	Equal          { Equal _ }
	NotEqual       { NotEqual _ }
	Less           { Less _ }
	Greater        { Greater _ }
	LessEqual      { LessEqual _ }
	GreaterEqual   { GreaterEqual _ }
	And            { And _ }
	Or             { Or _ }
	Inc            { Inc _ }
	Comma          { Comma _ }
	Semicolon      { Semicolon _ }
	Dot            { Dot _ }
	LParenthesis   { LParenthesis _ }
	RParenthesis   { RParenthesis _ }
	LBrace         { LBrace _ }
	RBrace         { RBrace _ }
	LBracket       { LBracket _ }
	RBracket       { RBracket _ }
	TypeDef        { TypeDef _ }
	Arrow          { Arrow _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseProgram rule  0
	Program         rule  1
	DeclList        rules 2, 3
	Decl            rules 4, 5, 6
	FuncDecl        rule  7
	ForallOpt       rules 8, 9
	TypeParams      rules 10, 11
	RetTypeOpt      rules 12, 13
	ParamsOpt       rules 14, 15
	Params          rules 16, 17
	Param           rule  18
	ParamTypeOpt    rules 19, 20
	StructDecl      rule  21
	Fields          rules 22, 23
	Field           rule  24
	VarDecl         rules 25, 26
	InitOpt         rules 27, 28
	Block           rule  29
	Stmts           rules 30, 31
	Stmt            rules 32, 33, 34, 35, 36, 37, 38, 39
	ForUpdate       rules 40, 41
	ElseOpt         rules 42, 43
	ForInitOpt      rules 44, 45
	ReturnOpt       rules 46, 47
	Expr            rules 48, 49
	AndExpr         rules 50, 51
	RelExpr         rules 52, 53
	RelOp           rules 54, 55, 56, 57, 58, 59
	AddExpr         rules 60, 61, 62
	Term            rules 63, 64, 65
	Primary         rules 66, 67, 68, 69, 70, 71, 72
	NewSize         rule  73
	ArgsOpt         rules 74, 75
	Args            rules 76, 77
	LValue          rules 78, 79, 80
	Literal         rules 81, 82, 83, 84
	Type            rule  85
	FuncType        rules 86, 87
	TypeBase        rules 88, 89, 90
	BaseType        rules 91, 92, 93, 94, 95, 96, 97

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseProgram -> . Program                    (rule 0)

	Let            shift, and enter state 8
	Func           reduce using rule 9
	Struct         shift, and enter state 9
	Forall         shift, and enter state 10
	%eof           reduce using rule 3

	Program        goto state 11
	DeclList       goto state 2
	Decl           goto state 3
	FuncDecl       goto state 4
	ForallOpt      goto state 5
	StructDecl     goto state 6
	VarDecl        goto state 7

State 1

	Program -> . DeclList                               (rule 1)

	Let            shift, and enter state 8
	Struct         shift, and enter state 9
	Forall         shift, and enter state 10

	DeclList       goto state 2
	Decl           goto state 3
	FuncDecl       goto state 4
	ForallOpt      goto state 5
	StructDecl     goto state 6
	VarDecl        goto state 7

State 2

	Program -> DeclList .                               (rule 1)

	%eof           reduce using rule 1


State 3

	DeclList -> Decl . DeclList                         (rule 2)

	Let            shift, and enter state 8
	Func           reduce using rule 9
	Struct         shift, and enter state 9
	Forall         shift, and enter state 10
	%eof           reduce using rule 3

	DeclList       goto state 17
	Decl           goto state 3
	FuncDecl       goto state 4
	ForallOpt      goto state 5
	StructDecl     goto state 6
	VarDecl        goto state 7

State 4

	Decl -> FuncDecl .                                  (rule 4)

	Let            reduce using rule 4
	Func           reduce using rule 4
	Struct         reduce using rule 4
	Forall         reduce using rule 4
	%eof           reduce using rule 4


State 5

	FuncDecl -> ForallOpt . Func Identifier LParenthesis ParamsOpt RParenthesis RetTypeOpt Block    (rule 7)

	Func           shift, and enter state 16


State 6

	Decl -> StructDecl .                                (rule 5)

	Let            reduce using rule 5
	Func           reduce using rule 5
	Struct         reduce using rule 5
	Forall         reduce using rule 5
	%eof           reduce using rule 5


State 7

	Decl -> VarDecl .                                   (rule 6)

	Let            reduce using rule 6
	Func           reduce using rule 6
	Struct         reduce using rule 6
	Forall         reduce using rule 6
	%eof           reduce using rule 6


State 8

	VarDecl -> Let . Identifier TypeDef Type InitOpt Semicolon    (rule 25)
	VarDecl -> Let . Identifier Assign Expr Semicolon    (rule 26)

	Identifier     shift, and enter state 15


State 9

	StructDecl -> Struct . Identifier LBrace Fields RBrace    (rule 21)

	Identifier     shift, and enter state 14


State 10

	ForallOpt -> Forall . TypeParams Dot                (rule 8)

	Identifier     shift, and enter state 13

	TypeParams     goto state 12

State 11

	%start_parseProgram -> Program .                    (rule 0)

	%eof           accept


State 12

	ForallOpt -> Forall TypeParams . Dot                (rule 8)

	Dot            shift, and enter state 23


State 13

	TypeParams -> Identifier .                          (rule 10)
	TypeParams -> Identifier . TypeParams               (rule 11)

	Identifier     shift, and enter state 13
	Dot            reduce using rule 10

	TypeParams     goto state 22

State 14

	StructDecl -> Struct Identifier . LBrace Fields RBrace    (rule 21)

	LBrace         shift, and enter state 21


State 15

	VarDecl -> Let Identifier . TypeDef Type InitOpt Semicolon    (rule 25)
	VarDecl -> Let Identifier . Assign Expr Semicolon    (rule 26)

	Assign         shift, and enter state 19
	TypeDef        shift, and enter state 20


State 16

	FuncDecl -> ForallOpt Func . Identifier LParenthesis ParamsOpt RParenthesis RetTypeOpt Block    (rule 7)

	Identifier     shift, and enter state 18


State 17

	DeclList -> Decl DeclList .                         (rule 2)

	%eof           reduce using rule 2


State 18

	FuncDecl -> ForallOpt Func Identifier . LParenthesis ParamsOpt RParenthesis RetTypeOpt Block    (rule 7)

	LParenthesis   shift, and enter state 54


State 19

	VarDecl -> Let Identifier Assign . Expr Semicolon    (rule 26)

	Identifier     shift, and enter state 46
	ValueInt       shift, and enter state 47
	ValueFloat     shift, and enter state 48
	ValueString    shift, and enter state 49
	ValueBool      shift, and enter state 50
	New            shift, and enter state 51
	LParenthesis   shift, and enter state 52
	LBracket       shift, and enter state 53

	Expr           goto state 38
	AndExpr        goto state 39
	RelExpr        goto state 40
	AddExpr        goto state 41
	Term           goto state 42
	Primary        goto state 43
	LValue         goto state 44
	Literal        goto state 45

State 20

	VarDecl -> Let Identifier TypeDef . Type InitOpt Semicolon    (rule 25)

	TypeInt        shift, and enter state 31
	TypeFloat      shift, and enter state 32
	TypeBool       shift, and enter state 33
	TypeString     shift, and enter state 34
	TypeVoid       shift, and enter state 35
	Identifier     shift, and enter state 36
	LParenthesis   shift, and enter state 37

	Type           goto state 27
	FuncType       goto state 28
	TypeBase       goto state 29
	BaseType       goto state 30

State 21

	StructDecl -> Struct Identifier LBrace . Fields RBrace    (rule 21)

	Identifier     shift, and enter state 26
	RBrace         reduce using rule 23

	Fields         goto state 24
	Field          goto state 25

State 22

	TypeParams -> Identifier TypeParams .               (rule 11)

	Dot            reduce using rule 11


State 23

	ForallOpt -> Forall TypeParams Dot .                (rule 8)

	Func           reduce using rule 8


State 24

	StructDecl -> Struct Identifier LBrace Fields . RBrace    (rule 21)

	RBrace         shift, and enter state 89


State 25

	Fields -> Field . Fields                            (rule 22)

	Identifier     shift, and enter state 26
	RBrace         reduce using rule 23

	Fields         goto state 88
	Field          goto state 25

State 26

	Field -> Identifier . TypeDef Type Semicolon        (rule 24)

	TypeDef        shift, and enter state 87


State 27

	VarDecl -> Let Identifier TypeDef Type . InitOpt Semicolon    (rule 25)

	Assign         shift, and enter state 86
	Semicolon      reduce using rule 28

	InitOpt        goto state 85

State 28

	Type -> FuncType .                                  (rule 85)

	Assign         reduce using rule 85
	Comma          reduce using rule 85
	Semicolon      reduce using rule 85
	RParenthesis   reduce using rule 85
	LBrace         reduce using rule 85


State 29

	FuncType -> TypeBase . Arrow Type                   (rule 86)
	FuncType -> TypeBase .                              (rule 87)
	TypeBase -> TypeBase . LBracket RBracket            (rule 89)
	TypeBase -> TypeBase . LBracket ValueInt RBracket    (rule 90)

	Assign         reduce using rule 87
	Comma          reduce using rule 87
	Semicolon      reduce using rule 87
	RParenthesis   reduce using rule 87
	LBrace         reduce using rule 87
	LBracket       shift, and enter state 83
	Arrow          shift, and enter state 84


State 30

	TypeBase -> BaseType .                              (rule 88)

	Assign         reduce using rule 88
	Comma          reduce using rule 88
	Semicolon      reduce using rule 88
	RParenthesis   reduce using rule 88
	LBrace         reduce using rule 88
	LBracket       reduce using rule 88
	Arrow          reduce using rule 88


State 31

	BaseType -> TypeInt .                               (rule 91)

	Assign         reduce using rule 91
	Comma          reduce using rule 91
	Semicolon      reduce using rule 91
	RParenthesis   reduce using rule 91
	LBrace         reduce using rule 91
	LBracket       reduce using rule 91
	Arrow          reduce using rule 91


State 32

	BaseType -> TypeFloat .                             (rule 92)

	Assign         reduce using rule 92
	Comma          reduce using rule 92
	Semicolon      reduce using rule 92
	RParenthesis   reduce using rule 92
	LBrace         reduce using rule 92
	LBracket       reduce using rule 92
	Arrow          reduce using rule 92


State 33

	BaseType -> TypeBool .                              (rule 93)

	Assign         reduce using rule 93
	Comma          reduce using rule 93
	Semicolon      reduce using rule 93
	RParenthesis   reduce using rule 93
	LBrace         reduce using rule 93
	LBracket       reduce using rule 93
	Arrow          reduce using rule 93


State 34

	BaseType -> TypeString .                            (rule 94)

	Assign         reduce using rule 94
	Comma          reduce using rule 94
	Semicolon      reduce using rule 94
	RParenthesis   reduce using rule 94
	LBrace         reduce using rule 94
	LBracket       reduce using rule 94
	Arrow          reduce using rule 94


State 35

	BaseType -> TypeVoid .                              (rule 95)

	Assign         reduce using rule 95
	Comma          reduce using rule 95
	Semicolon      reduce using rule 95
	RParenthesis   reduce using rule 95
	LBrace         reduce using rule 95
	LBracket       reduce using rule 95
	Arrow          reduce using rule 95


State 36

	BaseType -> Identifier .                            (rule 96)

	Assign         reduce using rule 96
	Comma          reduce using rule 96
	Semicolon      reduce using rule 96
	RParenthesis   reduce using rule 96
	LBrace         reduce using rule 96
	LBracket       reduce using rule 96
	Arrow          reduce using rule 96


State 37

	BaseType -> LParenthesis . Type RParenthesis        (rule 97)

	TypeInt        shift, and enter state 31
	TypeFloat      shift, and enter state 32
	TypeBool       shift, and enter state 33
	TypeString     shift, and enter state 34
	TypeVoid       shift, and enter state 35
	Identifier     shift, and enter state 36
	LParenthesis   shift, and enter state 37

	Type           goto state 82
	FuncType       goto state 28
	TypeBase       goto state 29
	BaseType       goto state 30

State 38

	VarDecl -> Let Identifier Assign Expr . Semicolon    (rule 26)
	Expr -> Expr . Or AndExpr                           (rule 48)

	Or             shift, and enter state 80
	Semicolon      shift, and enter state 81


State 39

	Expr -> AndExpr .                                   (rule 49)
	AndExpr -> AndExpr . And RelExpr                    (rule 50)

	And            shift, and enter state 79
	Or             reduce using rule 49
	Comma          reduce using rule 49
	Semicolon      reduce using rule 49
	RParenthesis   reduce using rule 49
	RBrace         reduce using rule 49
	RBracket       reduce using rule 49


State 40

	AndExpr -> RelExpr .                                (rule 51)
	RelExpr -> RelExpr . RelOp AddExpr                  (rule 52)

	Equal          shift, and enter state 73
	NotEqual       shift, and enter state 74
	Less           shift, and enter state 75
	Greater        shift, and enter state 76
	LessEqual      shift, and enter state 77
	GreaterEqual   shift, and enter state 78
	And            reduce using rule 51
	Or             reduce using rule 51
	Comma          reduce using rule 51
	Semicolon      reduce using rule 51
	RParenthesis   reduce using rule 51
	RBrace         reduce using rule 51
	RBracket       reduce using rule 51

	RelOp          goto state 72

State 41

	RelExpr -> AddExpr .                                (rule 53)
	AddExpr -> AddExpr . Plus Term                      (rule 60)
	AddExpr -> AddExpr . Minus Term                     (rule 61)

	Plus           shift, and enter state 70
	Minus          shift, and enter state 71
	Equal          reduce using rule 53
	NotEqual       reduce using rule 53
	Less           reduce using rule 53
	Greater        reduce using rule 53
	LessEqual      reduce using rule 53
	GreaterEqual   reduce using rule 53
	And            reduce using rule 53
	Or             reduce using rule 53
	Comma          reduce using rule 53
	Semicolon      reduce using rule 53
	RParenthesis   reduce using rule 53
	RBrace         reduce using rule 53
	RBracket       reduce using rule 53


State 42

	AddExpr -> Term .                                   (rule 62)
	Term -> Term . Multiply Primary                     (rule 63)
	Term -> Term . Divide Primary                       (rule 64)

	Plus           reduce using rule 62
	Minus          reduce using rule 62
	Multiply       shift, and enter state 68
	Divide         shift, and enter state 69
	Equal          reduce using rule 62
	NotEqual       reduce using rule 62
	Less           reduce using rule 62
	Greater        reduce using rule 62
	LessEqual      reduce using rule 62
	GreaterEqual   reduce using rule 62
	And            reduce using rule 62
	Or             reduce using rule 62
	Comma          reduce using rule 62
	Semicolon      reduce using rule 62
	RParenthesis   reduce using rule 62
	RBrace         reduce using rule 62
	RBracket       reduce using rule 62


State 43

	Term -> Primary .                                   (rule 65)

	Plus           reduce using rule 65
	Minus          reduce using rule 65
	Multiply       reduce using rule 65
	Divide         reduce using rule 65
	Equal          reduce using rule 65
	NotEqual       reduce using rule 65
	Less           reduce using rule 65
	Greater        reduce using rule 65
	LessEqual      reduce using rule 65
	GreaterEqual   reduce using rule 65
	And            reduce using rule 65
	Or             reduce using rule 65
	Comma          reduce using rule 65
	Semicolon      reduce using rule 65
	RParenthesis   reduce using rule 65
	RBrace         reduce using rule 65
	RBracket       reduce using rule 65


State 44

	Primary -> LValue .                                 (rule 68)
	LValue -> LValue . Dot Identifier                   (rule 79)
	LValue -> LValue . LBracket Expr RBracket           (rule 80)

	Plus           reduce using rule 68
	Minus          reduce using rule 68
	Multiply       reduce using rule 68
	Divide         reduce using rule 68
	Equal          reduce using rule 68
	NotEqual       reduce using rule 68
	Less           reduce using rule 68
	Greater        reduce using rule 68
	LessEqual      reduce using rule 68
	GreaterEqual   reduce using rule 68
	And            reduce using rule 68
	Or             reduce using rule 68
	Comma          reduce using rule 68
	Semicolon      reduce using rule 68
	Dot            shift, and enter state 66
	RParenthesis   reduce using rule 68
	RBrace         reduce using rule 68
	LBracket       shift, and enter state 67
	RBracket       reduce using rule 68


State 45

	Primary -> Literal .                                (rule 69)

	Plus           reduce using rule 69
	Minus          reduce using rule 69
	Multiply       reduce using rule 69
	Divide         reduce using rule 69
	Equal          reduce using rule 69
	NotEqual       reduce using rule 69
	Less           reduce using rule 69
	Greater        reduce using rule 69
	LessEqual      reduce using rule 69
	GreaterEqual   reduce using rule 69
	And            reduce using rule 69
	Or             reduce using rule 69
	Comma          reduce using rule 69
	Semicolon      reduce using rule 69
	RParenthesis   reduce using rule 69
	RBrace         reduce using rule 69
	RBracket       reduce using rule 69


State 46

	Primary -> Identifier . LParenthesis ArgsOpt RParenthesis    (rule 67)
	Primary -> Identifier . LBrace ArgsOpt RBrace       (rule 71)
	LValue -> Identifier .                              (rule 78)

	Plus           reduce using rule 78
	Minus          reduce using rule 78
	Multiply       reduce using rule 78
	Divide         reduce using rule 78
	Assign         reduce using rule 78
	Equal          reduce using rule 78
	NotEqual       reduce using rule 78
	Less           reduce using rule 78
	Greater        reduce using rule 78
	LessEqual      reduce using rule 78
	GreaterEqual   reduce using rule 78
	And            reduce using rule 78
	Or             reduce using rule 78
	Inc            reduce using rule 78
	Comma          reduce using rule 78
	Semicolon      reduce using rule 78
	Dot            reduce using rule 78
	LParenthesis   shift, and enter state 64
	RParenthesis   reduce using rule 78
	LBrace         shift, and enter state 65
	RBrace         reduce using rule 78
	LBracket       reduce using rule 78
	RBracket       reduce using rule 78


State 47

	Literal -> ValueInt .                               (rule 81)

	Plus           reduce using rule 81
	Minus          reduce using rule 81
	Multiply       reduce using rule 81
	Divide         reduce using rule 81
	Equal          reduce using rule 81
	NotEqual       reduce using rule 81
	Less           reduce using rule 81
	Greater        reduce using rule 81
	LessEqual      reduce using rule 81
	GreaterEqual   reduce using rule 81
	And            reduce using rule 81
	Or             reduce using rule 81
	Comma          reduce using rule 81
	Semicolon      reduce using rule 81
	RParenthesis   reduce using rule 81
	RBrace         reduce using rule 81
	RBracket       reduce using rule 81


State 48

	Literal -> ValueFloat .                             (rule 82)

	Plus           reduce using rule 82
	Minus          reduce using rule 82
	Multiply       reduce using rule 82
	Divide         reduce using rule 82
	Equal          reduce using rule 82
	NotEqual       reduce using rule 82
	Less           reduce using rule 82
	Greater        reduce using rule 82
	LessEqual      reduce using rule 82
	GreaterEqual   reduce using rule 82
	And            reduce using rule 82
	Or             reduce using rule 82
	Comma          reduce using rule 82
	Semicolon      reduce using rule 82
	RParenthesis   reduce using rule 82
	RBrace         reduce using rule 82
	RBracket       reduce using rule 82


State 49

	Literal -> ValueString .                            (rule 84)

	Plus           reduce using rule 84
	Minus          reduce using rule 84
	Multiply       reduce using rule 84
	Divide         reduce using rule 84
	Equal          reduce using rule 84
	NotEqual       reduce using rule 84
	Less           reduce using rule 84
	Greater        reduce using rule 84
	LessEqual      reduce using rule 84
	GreaterEqual   reduce using rule 84
	And            reduce using rule 84
	Or             reduce using rule 84
	Comma          reduce using rule 84
	Semicolon      reduce using rule 84
	RParenthesis   reduce using rule 84
	RBrace         reduce using rule 84
	RBracket       reduce using rule 84


State 50

	Literal -> ValueBool .                              (rule 83)

	Plus           reduce using rule 83
	Minus          reduce using rule 83
	Multiply       reduce using rule 83
	Divide         reduce using rule 83
	Equal          reduce using rule 83
	NotEqual       reduce using rule 83
	Less           reduce using rule 83
	Greater        reduce using rule 83
	LessEqual      reduce using rule 83
	GreaterEqual   reduce using rule 83
	And            reduce using rule 83
	Or             reduce using rule 83
	Comma          reduce using rule 83
	Semicolon      reduce using rule 83
	RParenthesis   reduce using rule 83
	RBrace         reduce using rule 83
	RBracket       reduce using rule 83


State 51

	Primary -> New . BaseType LBracket NewSize RBracket    (rule 72)

	TypeInt        shift, and enter state 31
	TypeFloat      shift, and enter state 32
	TypeBool       shift, and enter state 33
	TypeString     shift, and enter state 34
	TypeVoid       shift, and enter state 35
	Identifier     shift, and enter state 36
	LParenthesis   shift, and enter state 37

	BaseType       goto state 63

State 52

	Primary -> LParenthesis . Expr RParenthesis         (rule 66)

	Identifier     shift, and enter state 46
	ValueInt       shift, and enter state 47
	ValueFloat     shift, and enter state 48
	ValueString    shift, and enter state 49
	ValueBool      shift, and enter state 50
	New            shift, and enter state 51
	LParenthesis   shift, and enter state 52
	LBracket       shift, and enter state 53

	Expr           goto state 62
	AndExpr        goto state 39
	RelExpr        goto state 40
	AddExpr        goto state 41
	Term           goto state 42
	Primary        goto state 43
	LValue         goto state 44
	Literal        goto state 45

State 53

	Primary -> LBracket . ArgsOpt RBracket              (rule 70)

	Identifier     shift, and enter state 46
	ValueInt       shift, and enter state 47
	ValueFloat     shift, and enter state 48
	ValueString    shift, and enter state 49
	ValueBool      shift, and enter state 50
	New            shift, and enter state 51
	LParenthesis   shift, and enter state 52
	LBracket       shift, and enter state 53
	RBracket       reduce using rule 75

	Expr           goto state 59
	AndExpr        goto state 39
	RelExpr        goto state 40
	AddExpr        goto state 41
	Term           goto state 42
	Primary        goto state 43
	ArgsOpt        goto state 60
	Args           goto state 61
	LValue         goto state 44
	Literal        goto state 45

State 54

	FuncDecl -> ForallOpt Func Identifier LParenthesis . ParamsOpt RParenthesis RetTypeOpt Block    (rule 7)

	Identifier     shift, and enter state 58
	RParenthesis   reduce using rule 15

	ParamsOpt      goto state 55
	Params         goto state 56
	Param          goto state 57

State 55

	FuncDecl -> ForallOpt Func Identifier LParenthesis ParamsOpt . RParenthesis RetTypeOpt Block    (rule 7)

	RParenthesis   shift, and enter state 115


State 56

	ParamsOpt -> Params .                               (rule 14)

	RParenthesis   reduce using rule 14


State 57

	Params -> Param .                                   (rule 16)
	Params -> Param . Comma Params                      (rule 17)

	Comma          shift, and enter state 114
	RParenthesis   reduce using rule 16


State 58

	Param -> Identifier . ParamTypeOpt                  (rule 18)

	Comma          reduce using rule 20
	RParenthesis   reduce using rule 20
	TypeDef        shift, and enter state 113

	ParamTypeOpt   goto state 112

State 59

	Expr -> Expr . Or AndExpr                           (rule 48)
	Args -> Expr .                                      (rule 76)
	Args -> Expr . Comma Args                           (rule 77)

	Or             shift, and enter state 80
	Comma          shift, and enter state 111
	RParenthesis   reduce using rule 76
	RBrace         reduce using rule 76
	RBracket       reduce using rule 76


State 60

	Primary -> LBracket ArgsOpt . RBracket              (rule 70)

	RBracket       shift, and enter state 110


State 61

	ArgsOpt -> Args .                                   (rule 74)

	RParenthesis   reduce using rule 74
	RBrace         reduce using rule 74
	RBracket       reduce using rule 74


State 62

	Expr -> Expr . Or AndExpr                           (rule 48)
	Primary -> LParenthesis Expr . RParenthesis         (rule 66)

	Or             shift, and enter state 80
	RParenthesis   shift, and enter state 109


State 63

	Primary -> New BaseType . LBracket NewSize RBracket    (rule 72)

	LBracket       shift, and enter state 108


State 64

	Primary -> Identifier LParenthesis . ArgsOpt RParenthesis    (rule 67)

	Identifier     shift, and enter state 46
	ValueInt       shift, and enter state 47
	ValueFloat     shift, and enter state 48
	ValueString    shift, and enter state 49
	ValueBool      shift, and enter state 50
	New            shift, and enter state 51
	LParenthesis   shift, and enter state 52
	RParenthesis   reduce using rule 75
	LBracket       shift, and enter state 53

	Expr           goto state 59
	AndExpr        goto state 39
	RelExpr        goto state 40
	AddExpr        goto state 41
	Term           goto state 42
	Primary        goto state 43
	ArgsOpt        goto state 107
	Args           goto state 61
	LValue         goto state 44
	Literal        goto state 45

State 65

	Primary -> Identifier LBrace . ArgsOpt RBrace       (rule 71)

	Identifier     shift, and enter state 46
	ValueInt       shift, and enter state 47
	ValueFloat     shift, and enter state 48
	ValueString    shift, and enter state 49
	ValueBool      shift, and enter state 50
	New            shift, and enter state 51
	LParenthesis   shift, and enter state 52
	RBrace         reduce using rule 75
	LBracket       shift, and enter state 53

	Expr           goto state 59
	AndExpr        goto state 39
	RelExpr        goto state 40
	AddExpr        goto state 41
	Term           goto state 42
	Primary        goto state 43
	ArgsOpt        goto state 106
	Args           goto state 61
	LValue         goto state 44
	Literal        goto state 45

State 66

	LValue -> LValue Dot . Identifier                   (rule 79)

	Identifier     shift, and enter state 105


State 67

	LValue -> LValue LBracket . Expr RBracket           (rule 80)

	Identifier     shift, and enter state 46
	ValueInt       shift, and enter state 47
	ValueFloat     shift, and enter state 48
	ValueString    shift, and enter state 49
	ValueBool      shift, and enter state 50
	New            shift, and enter state 51
	LParenthesis   shift, and enter state 52
	LBracket       shift, and enter state 53

	Expr           goto state 104
	AndExpr        goto state 39
	RelExpr        goto state 40
	AddExpr        goto state 41
	Term           goto state 42
	Primary        goto state 43
	LValue         goto state 44
	Literal        goto state 45

State 68

	Term -> Term Multiply . Primary                     (rule 63)

	Identifier     shift, and enter state 46
	ValueInt       shift, and enter state 47
	ValueFloat     shift, and enter state 48
	ValueString    shift, and enter state 49
	ValueBool      shift, and enter state 50
	New            shift, and enter state 51
	LParenthesis   shift, and enter state 52
	LBracket       shift, and enter state 53

	Primary        goto state 103
	LValue         goto state 44
	Literal        goto state 45

State 69

	Term -> Term Divide . Primary                       (rule 64)

	Identifier     shift, and enter state 46
	ValueInt       shift, and enter state 47
	ValueFloat     shift, and enter state 48
	ValueString    shift, and enter state 49
	ValueBool      shift, and enter state 50
	New            shift, and enter state 51
	LParenthesis   shift, and enter state 52
	LBracket       shift, and enter state 53

	Primary        goto state 102
	LValue         goto state 44
	Literal        goto state 45

State 70

	AddExpr -> AddExpr Plus . Term                      (rule 60)

	Identifier     shift, and enter state 46
	ValueInt       shift, and enter state 47
	ValueFloat     shift, and enter state 48
	ValueString    shift, and enter state 49
	ValueBool      shift, and enter state 50
	New            shift, and enter state 51
	LParenthesis   shift, and enter state 52
	LBracket       shift, and enter state 53

	Term           goto state 101
	Primary        goto state 43
	LValue         goto state 44
	Literal        goto state 45

State 71

	AddExpr -> AddExpr Minus . Term                     (rule 61)

	Identifier     shift, and enter state 46
	ValueInt       shift, and enter state 47
	ValueFloat     shift, and enter state 48
	ValueString    shift, and enter state 49
	ValueBool      shift, and enter state 50
	New            shift, and enter state 51
	LParenthesis   shift, and enter state 52
	LBracket       shift, and enter state 53

	Term           goto state 100
	Primary        goto state 43
	LValue         goto state 44
	Literal        goto state 45

State 72

	RelExpr -> RelExpr RelOp . AddExpr                  (rule 52)
